--- a/output/abc_cohorts.tex
+++ b/output/abc_cohorts.tex
@@ -4,7 +4,7 @@
 \caption{Treatment - Control Mean Difference by Cohort, ABC}
 \label{table:cohorts}
 \begin{tabular}{lcc} \toprule
- & (1) & (2) \\
+ & Age 1 & Age 2 \\
  \midrule
 Cohort 1 & 4.841 & -2.901 \\
  & (5.840) & (5.838) \\
