--- a/Appendices/CommonCritiques.tex
+++ b/Appendices/CommonCritiques.tex
@@ -1,10 +1,10 @@
 \section{Assessing Common Criticisms of ABC} \label{appendix:assessingcc}
 
-\noindent This section of the appendix assesses some of the criticism to ABC that might also apply to CARE. The critiques focus on the first phase of the program, henceforth called ABC in this section of the appendix. We consider the following categories of criticism: (i) validity of treatment effects given early differences between treatment and control groups, (ii) fadeout of the treatment effect on cognitive outcomes, and (iii) compromised randomization. \\
+\noindent This section of the appendix assesses some of the criticism to ABC that might also apply to CARE. The critiques focus on the first phase of the program, henceforth called ABC in this section of the appendix. We consider the following categories of criticism: (i) validity of treatment effects given early differences between treatment and control groups, (ii) fadeout of the treatment effect on cognitive outcomes, and (iii) compromised randomization. We make seven points to assess these critiques. \\
 
 \subsection{Treatment Effects vs. Early Differences Between Groups}
 
-\noindent The first criticism we address is that of \citet{Spitz_1992_ABC-Retardation}. The author questions whether ABC prevented socio-cultural mental retardation. He focuses on different measures of cognition, and generically calls them IQ. His main focus is on the raw mean difference between the treatment and the control groups in the Bayley Mental Development Index (MDI) from the Bayley Scales of Infant Development and Infant Behavior (BSID) at 1 year of age.\footnote{The Bayley Mental Development Index (MDI) is a standard measure of cognition at taken between ages 0 and 2 \citep{Childrens-Health_2016_Bayley-Scales}.} He finds a noticeable disparity in the mean difference between cohorts 1 and 2 and cohorts 3 and 4, as early as six months after the treatment began. \citet{Spitz_1992_ABC-Retardation} argues that this difference, displayed in Table~\ref{table:cohorts}, is conspicuous. Importantly, the author fails to note that the mean differences have noticeably high standard errors.
+\noindent The first criticism we address is that of \citet{Spitz_1992_ABC-Retardation}. The author questions whether ABC prevented socio-cultural mental retardation. He focuses on different measures of cognition, and generically calls them IQ. His main focus is on the raw mean difference between the treatment and the control groups in the Bayley Mental Development Index (MDI) from the Bayley Scales of Infant Development and Infant Behavior (BSID) at 1 year of age.\footnote{The Bayley Mental Development Index (MDI) is a standard measure of cognition taken between ages 0 and 2 \citep{Childrens-Health_2016_Bayley-Scales}.} He finds a noticeable disparity in the mean difference between cohorts 1 and 2 and cohorts 3 and 4, as early as six months after the treatment began. \citet{Spitz_1992_ABC-Retardation} argues that this difference, displayed in Table~\ref{table:cohorts}, is conspicuous. Importantly, the author fails to note that the mean differences have noticeably high standard errors.
 
 \input{output/abc_cohorts}
 
@@ -30,17 +30,15 @@
 \noindent Note: This figure displays the mean difference in IQ scores at different ages between the treatment and control groups, pooling males and females. The line with circles represents the raw difference. The line with squares represents the difference when linearly controlling for the Bayley Mental Development Index at 12 and 24 months.}
 \end{figure}
 
-\noindent The author raises an additional concern. He states that even if the early-life effects on the Bayley MDI were valid, the effects were not long-lasting. When doing so, he exclusively refers to the effects the program had on cognition. As we document throughout the main paper, however, ABC had effects on a wide set of life-cycle outcomes, which perhaps are more important than the effects on cognition if measured by the economic gains they generate. Examples include: employment at age 30 for males, high-school graduation for females, and a variety of health measures at age 34 for males. We document these effects in the main paper.\\
+\noindent The author raises an additional concern. He states that even if the early-life effects on the Bayley MDI were valid, the effects were not long-lasting. When doing so, he exclusively refers to the effects the program had on cognition. As we document throughout the main paper, however, ABC had effects on a wide set of life-cycle outcomes, which perhaps are more important than the effects on cognition if measured by the economic gains they generate---and, in any event, the program had long-lasting effects on IQ. Examples include: employment at age 30 for males, high-school graduation for females, and a variety of health measures at age 34 for males. We document these effects in the main paper.\\
 
 \subsection{Fadeout of Treatment Effects}
 
-\noindent This sustained effect on life-cycle outcomes relates to another category of criticism of ABC---the fadeout of treatment effects after the actual treatment period.\footnote{See, for example, \citet{Besharov-etal_2011_ABCProject}.} Based on the fadeout of the effects on cognition and other age-21 outcomes, some studies claim that ABC had no sustained long-term effects. The analysis in the text refutes this. \\
-
-\noindent  \textbf{4. The treatment effects of ABC differ by gender.} For example, we find substantial effects on employment for males and high-school graduation for females. This does not mean that the program did not work. It means that market conditions could have affected the way in which the treated subjects benefited from the program's effects.\\
+\noindent This sustained effect on life-cycle outcomes relates to another category of criticism of ABC---the fadeout of treatment effects after the actual treatment period.\footnote{See, for example, \citet{Besharov-etal_2011_ABCProject}.} Based on the fadeout of the effects on cognition and other age-21 outcomes, some studies claim that ABC had no sustained long-term effects. \textbf{4. The analysis in the text refutes this. And, in ABC, there are long-term effects on IQ.} \\
 
 \subsection{Compromised Randomization}
 
-\noindent The third and last critique we assess is that of compromised randomization.\footnote{See for example \citet{Baumeister-Bacharach_2000_Early-Generic} and the multiple studies cited there.} The main critique to the program in this respect is that seven children in the treatment group did not comply with their initial assignment and one subject switched from control to treatment status (see Table~\ref{table:abccompromises}, which we reproduce from the main paper). Although we document more cases of compromised randomization, we start by assessing these eight cases.\footnote{Our main methodology assesses all the cases except the four subjects for whom we do not have data at all. We are not able to account for them because our method is based on observing at least some baseline characteristics. See Section~\ref{section:methodology} in the main paper for more details.}\\
+\noindent The third and last critique we assess is that of compromised randomization.\footnote{See for example \citet{Baumeister-Bacharach_2000_Early-Generic} and the multiple studies cited there.} The main critique to the program in this respect is that seven children in the treatment group did not comply with their initial assignment and one subject switched from control to treatment status (see Table~\ref{table:abccompromises}). Although we document more cases of compromised randomization, we start by assessing the eight mos relevant and evident cases.\footnote{Our main methodology assesses all the cases except the four subjects for whom we do not have data at all. We are not able to account for them because our method is based on observing at least some baseline characteristics. See Section~\ref{section:methodology} in the main paper for more details.}\\
 
 \noindent First, we propose a method for assessing the empirical importance of the non-compliance of six subjects for whom we have data available from ages 0 to 8. This allows us to adjust the mean difference between the treatment and the control groups, using a standard Bloom estimator \citep{Bloom_1984_ER}. This estimator accounts for compliance, by weighting the mean difference by a measure of the probability of compliance. It takes the following form:
 
