--- a/output/sensitivity.tex
+++ b/output/sensitivity.tex
@@ -4,29 +4,30 @@
 \cmidrule(lr){2-4}      \cmidrule(lr){5-7}      \cmidrule(lr){8-10}																			
 Removed Component       &       NPV     &       IRR     &       B/C     &       NPV     &       IRR     &       B/C     &       NPV     &       IRR     &       B/C     \\																			
 \midrule																			
-None	&	145,551	&	0.10	&	\textbf{2.59}	&	807,846	&	\textbf{0.14}	&	\textbf{9.75}	&	424,024	&	\textbf{0.13}	&	\textbf{5.58}	\\
-	&		&	(0.07)	&	(0.97)	&		&	(0.05)	&	(4.59)	&		&	(0.05)	&	(2.32)	\\ \\
-Parental Income	&	101,786	&	0.05	&	1.47	&	68,314	&	\textbf{0.11}	&	\textbf{9.00}	&	84,830	&	\textbf{0.09}	&	\textbf{4.66}	\\
-	&		&	(0.02)	&	(0.89)	&		&	(0.04)	&	(4.63)	&		&	(0.03)	&	(2.30)	\\
-Subject Labor Income	&	50,580	&	0.09	&	\textbf{2.05}	&	308,825	&	\textbf{0.12}	&	6.30	&	73,105	&	\textbf{0.13}	&	\textbf{4.68}	\\
-	&		&	(0.07)	&	(0.71)	&		&	(0.06)	&	(3.85)	&		&	(0.05)	&	(2.07)	\\
-Subject Transfer Income	&	2,217	&	0.10	&	\textbf{2.56}	&	-5,943	&	\textbf{0.14}	&	\textbf{9.81}	&	-2,798	&	\textbf{0.13}	&	\textbf{5.62}	\\
-	&		&	(0.07)	&	(0.96)	&		&	(0.05)	&	(4.59)	&		&	(0.05)	&	(2.33)	\\
-Subject QALY	&	14,964	&	0.10	&	\textbf{2.43}	&	68,306	&	\textbf{0.14}	&	\textbf{9.05}	&	75,462	&	\textbf{0.12}	&	\textbf{4.75}	\\
-	&		&	(0.07)	&	(0.91)	&		&	(0.05)	&	(4.32)	&		&	(0.06)	&	(2.26)	\\
-Medical Expenditures	&	-14,881	&	0.11	&	\textbf{2.75}	&	-18,601	&	\textbf{0.14}	&	\textbf{9.95}	&	-18,397	&	\textbf{0.14}	&	\textbf{5.78}	\\
-	&		&	(0.07)	&	(0.98)	&		&	(0.05)	&	(4.58)	&		&	(0.04)	&	(2.30)	\\
-Control Substitution	&	17,246	&	0.08	&	\textbf{2.40}	&	13,889	&	\textbf{0.13}	&	\textbf{9.60}	&	15,376	&	\textbf{0.12}	&	\textbf{5.42}	\\
-	&		&	(0.05)	&	(0.97)	&		&	(0.04)	&	(4.58)	&		&	(0.04)	&	(2.32)	\\
-Education Costs	&	-2,195	&	0.10	&	\textbf{2.61}	&	6,293	&	\textbf{0.13}	&	\textbf{9.68}	&	-491	&	\textbf{0.13}	&	\textbf{5.58}	\\
-	&		&	(0.07)	&	(0.97)	&		&	(0.05)	&	(4.60)	&		&	(0.05)	&	(2.33)	\\
-Crime Costs	&	65,209	&	0.09	&	1.87	&	451,831	&	\textbf{0.10}	&	4.76	&	276,621	&	\textbf{0.09}	&	2.51	\\
-	&		&	(0.07)	&	(0.94)	&		&	(0.04)	&	(2.85)	&		&	(0.04)	&	(1.13)	\\ \\
-Deadweight Loss	&		&	0.16	&	\textbf{3.69}	&		&	\textbf{0.19}	&	\textbf{14.55}	&		&	\textbf{0.19}	&	\textbf{8.29}	\\
-	&		&	(0.14)	&	(1.43)	&		&	(0.07)	&	(6.88)	&		&	(0.08)	&	(3.49)	\\
-0\% Discount Rate	&		&		&	4.98	&		&		&	\textbf{25.38}	&		&		&	\textbf{13.40}	\\
-	&		&		&	(3.36)	&		&		&	(13.55)	&		&		&	(6.51)	\\
-7\% Discount Rate	&		&		&	1.44	&		&		&	\textbf{3.55}	&		&		&	\textbf{2.37}	\\
-	&		&		&	(0.37)	&		&		&	(1.45)	&		&		&	(0.80)	\\
+None	&	148,403	&	0.10	&	\textbf{2.60}	&	987,337	&	\textbf{0.14}	&	\textbf{11.62}	&	434,108	&	\textbf{0.12}	&	\textbf{5.69}	\\
+	&		&	(0.07)	&	(0.98)	&		&	(0.06)	&	(5.49)	&		&	(0.05)	&	(2.32)	\\ \\
+Parental Income	&	101,786	&	0.04	&	1.50	&	68,314	&	\textbf{0.11}	&	\textbf{10.88}	&	84,830	&	\textbf{0.08}	&	\textbf{4.78}	\\
+	&		&	(0.02)	&	(0.90)	&		&	(0.05)	&	(5.50)	&		&	(0.03)	&	(2.32)	\\
+Subject Labor Income	&	50,580	&	0.09	&	\textbf{2.08}	&	308,825	&	\textbf{0.12}	&	8.23	&	73,105	&	\textbf{0.11}	&	\textbf{4.83}	\\
+	&		&	(0.07)	&	(0.72)	&		&	(0.07)	&	(5.19)	&		&	(0.06)	&	(2.13)	\\
+Subject Transfer Income	&	2,434	&	0.10	&	\textbf{2.58}	&	-6,922	&	\textbf{0.14}	&	\textbf{11.70}	&	-3,092	&	\textbf{0.12}	&	\textbf{5.73}	\\
+	&		&	(0.07)	&	(0.97)	&		&	(0.06)	&	(5.48)	&		&	(0.05)	&	(2.32)	\\
+Subject QALY	&	12,365	&	0.09	&	\textbf{2.48}	&	90,999	&	\textbf{0.13}	&	\textbf{10.61}	&	78,322	&	\textbf{0.11}	&	\textbf{4.85}	\\
+	&		&	(0.07)	&	(0.97)	&		&	(0.07)	&	(5.37)	&		&	(0.06)	&	(2.32)	\\
+Medical Expenditures	&	-10,058	&	0.09	&	\textbf{2.70}	&	-28,499	&	\textbf{0.15}	&	\textbf{11.92}	&	-27,567	&	\textbf{0.13}	&	\textbf{5.98}	\\
+	&	&	(0.07)	&	(1.00)	&		&	(0.05)	&	(5.46)	&		&	(0.04)	&	(2.31)	\\
+Control Substitution	&	17,246	&	0.08	&	\textbf{2.42}	&	14,283	&	\textbf{0.13}	&	\textbf{11.47}	&	15,334	&	\textbf{0.11}	&	\textbf{5.53}	\\
+	&		&	(0.05)	&	(0.98)	&		&	(0.05)	&	(5.49)	&		&	(0.05)	&	(2.32)	\\
+Education Costs	&	-2,195	&	0.10	&	\textbf{2.62}	&	5,643	&	\textbf{0.14}	&	\textbf{11.56}	&	-629	&	\textbf{0.12}	&	\textbf{5.70}	\\
+	&		&	(0.07)	&	(0.98)	&		&	(0.06)	&	(5.48)	&		&	(0.05)	&	(2.33)	\\
+Crime Costs	&	65,209	&	0.09	&	1.89	&	622,376	&	\textbf{0.09}	&	4.91	&	297,855	&	0.07	&	2.42	\\
+	&		&	(0.07)	&	(0.95)	&		&	(0.05)	&	(2.95)	&		&	(0.04)	&	(1.13)	\\ \\
+Deadweight Loss	&		&	0.17	&	\textbf{3.69}	&		&	\textbf{0.19}	&	\textbf{17.43}	&		&	\textbf{0.18}	&	\textbf{8.50}	\\
+	&		&	(0.16)	&	(1.43)	&		&	(0.08)	&	(8.19)	&		&	(0.08)	&	(3.47)	\\
+0\% Discount Rate	&		&		&	5.34	&		&		&	\textbf{29.50}	&		&		&	\textbf{13.38}	\\
+	&		&		&	(3.81)	&		&		&	(15.93)	&		&		&	(7.01)	\\
+7\% Discount Rate	&		&		&	1.43	&		&		&	\textbf{4.21}	&		&		&	\textbf{2.40}	\\
+	&		&		&	(0.37)	&		&		&	(1.88)	&		&		&	(0.80)	\\
+
 \bottomrule																			
 \end{tabular}																			
