qaly results included

--- a/output/allbc_sens.tex
+++ b/output/allbc_sens.tex
@@ -1,33 +1,33 @@
 \begin{tabular}{>{\bfseries}lcc|cc|cc} \toprule
 	&	\multicolumn{2}{c}{\textbf{\textit{Pooled}}}	&	\multicolumn{2}{c}{\textbf{\textit{Males}}}	&	\multicolumn{2}{c}{\textbf{\textit{Females}}}	\\ 
-Baseline	&	\multicolumn{2}{c}{5.58 (s.e. 2.32)}	&	\multicolumn{2}{c}{9.75 (s.e. 4.59)}	&	\multicolumn{2}{c}{2.56 (s.e. 0.97)}	\\ \\
+Baseline	&	\multicolumn{2}{c}{5.69 (s.e. 2.32)}	&	\multicolumn{2}{c}{11.62 (s.e. 5.49)}	&	\multicolumn{2}{c}{2.60 (s.e. 0.98)}	\\ \\
 \multicolumn{7}{l}{\textit{Baseline: IPW and Controls, Life-span up to Age 79, Treatment vs. Next Best, 50\% Marginal tax 50\% (deadweight loss), Discount rate 3\%, Parental}} \\	
 \multicolumn{7}{l}{\textit{income 0 to 21 (child's age), Labor Income predicted from 21 to 65, All crimes (full costs), Value of life 150,000.}} \\ \\ \midrule	
 Specification	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	\\
-	&	\textbf{6.02}	&	\textbf{5.32}	&	\textbf{9.81}	&	\textbf{9.73}	&	\textbf{2.88}	&	\textbf{2.80}	\\
-	&	(2.26)	&	(2.04) &	(5.06)	&	(3.60)	&	(0.93)	&	(0.79)	\\ \midrule
+	&	\textbf{6.17}	&	\textbf{5.35}	&	\textbf{11.94} 	&	\textbf{10.74}	&	\textbf{2.91}	&	\textbf{2.79}	\\
+	&	(2.35)	&	(2.04)	&	(6.14)	&	(4.12)	&	(0.97)	&	(0.81)	\\ \midrule
 Prediction	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	\\
-Span	&	1.54	&	\textbf{1.80}	&	\textbf{2.15}	&	\textbf{2.55}	&	\textbf{1.18}	&	\textbf{1.52}	\\
-	&	(0.43)	&	(0.47)	&	(0.70)	&	(0.88)	&	(0.40)	&	(0.48)	\\ \midrule
+Span	&	\textbf{1.55}	&	2.01	&	\textbf{2.17}	&	2.80	&	1.17	&	1.52	\\
+	&	(0.39)	&	(0.88)	&	(0.74)	&	(1.96)	&	(0.43)	&	(0.48)	\\ \midrule
 Counter-	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	\\
-factuals	&	\textbf{4.42}	&	\textbf{6.29}	&	4.32	&	\textbf{12.38}	&	\textbf{4.81}	&	\textbf{2.37}	\\
-	&	(1.39)	&	(2.23)	&	(2.70)	&	(5.16)	&	(1.42)	&	(0.91)	\\ \midrule
+factuals	&	\textbf{4.44}	&	\textbf{6.58}	&	3.88	&	\textbf{10.85}	&	\textbf{4.89}	&	\textbf{2.40}	\\
+	&	(1.68)	&	(2.22)	&	(2.78)	&	(4.14)	&	(1.50)	&	(0.94)	\\ \midrule
 Deadweight-	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%\textit}	\\
-loss	&	\textbf{8.29}	&	\textbf{4.23}	&	\textbf{14.55}	&	\textbf{7.35}	&	\textbf{3.69}	&	\textbf{2.03}	\\
-	&	(3.49)	&	(1.75)	&	(6.88)	&	(3.45)	&	(1.43)	&	(0.77)	\\ \midrule
+loss	&	\textbf{8.50}	&	\textbf{4.29}	&	\textbf{17.43}	&	\textbf{8.71}	&	\textbf{3.69}	&	2.06	\\
+	&	(3.47)	&	(1.75)	&	(8.19)	&	(4.14)	&	(1.43)	&	(0.79)	\\ \midrule
 Discount 	&	\textit{0\%}	&	\textit{7\%}	&	\textit{0\%}	&	\textit{7\%}	&	\textit{0\%}	&	\textit{7\%}	\\
-Rate	&	\textbf{13.40}	&	\textbf{2.37}	&	\textbf{25.38}	&	\textbf{3.55}	&	4.98	&	1.44	\\
-	&	(6.51)	&	(0.80)	&	(13.55)	&	(1.45)	&	(3.36)	&	(0.37)	\\ \midrule
+Rate	&	13.38	&	2.40	&	29.50	&	4.21	&	5.34	&	1.43	\\
+	&	7.01	&	0.80	&	15.93	&	1.88	&	3.81	&	0.37	\\ \midrule
 Parental	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	\\
-Income	&	\textbf{5.81}	&	\textbf{6.07}	&	\textbf{9.94}	&	\textbf{10.27}	&	\textbf{2.86}	&	\textbf{3.15}	\\
-	&	(2.33)	&	(2.49)	&	(4.58)	&	(4.67)	&	(1.01)	&	(1.10)	\\ \midrule
+Income	&	\textbf{5.92}	&	\textbf{5.60}	&	\textbf{11.80}	&	\textbf{12.36}	&	\textbf{2.88}	&	\textbf{3.27}	\\
+	&	(2.32)	&	(2.39)	&	(5.49)	&	(5.68)	&	(1.02)	&	(1.21)	\\ \midrule
 Labor	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	\\
-Income	&	\textbf{5.36}	&	\textbf{5.80}	&	\textbf{8.89}	&	\textbf{10.61}	&	\textbf{2.45}	&	\textbf{2.72}	\\
-	&	(2.22)	&	(2.45)	&	(4.29)	&	(4.95)	&	(0.86)	&	(1.09)	\\ \midrule
+Income	&	\textbf{5.48}	&	\textbf{5.90}	&	\textbf{10.76}	&	\textbf{12.49}	&	\textbf{2.47}	&	\textbf{2.74}	\\
+	&	(2.25)	&	(2.41)	&	(5.33)	&	(5.71)	&	(0.87)	&	(1.10)	\\ \midrule
 Crime	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	\\
-	&	\textbf{5.26}	&	\textbf{4.07}	&	\textbf{11.75}	&	\textbf{7.29}	&	\textbf{2.70}	&	\textbf{2.23}	\\
-	&	(2.31)	&	(1.59)	&	(5.59)	&	(3.41)	&	(1.03)	&	(0.94)	\\ \midrule
+	&	\textbf{5.14} 	&	\textbf{4.07}	&	\textbf{11.82}	&	\textbf{8.33}	&	\textbf{2.72}	&	2.25	\\
+	&	(2.30)	&	(1.50)	&	(5.59)	&	(3.64)	&	(1.04)	&	(0.95)	\\ \midrule
 Health	&	\textit{Drop All}	&	\textit{Double Value of Life}	&	\textit{Drop All}	&	\textit{Double Value of Life}	&	\textit{Drop All}	&	\textit{Double Value of Life}	\\
-(QALYs)	&	\textbf{4.75}	&	\textbf{6.43}	&	\textbf{9.05}	&	\textbf{10.49}	&	\textbf{2.43}	&	\textbf{2.74}	\\
-	&	(2.26)	&	(2.59)	&	(4.32)	&	(5.21)	&	(0.91)	&	(1.25)	\\ \bottomrule
+(QALYs)	&	\textbf{4.85}	&	\textbf{6.56}	&	\textbf{10.61}	&	\textbf{12.63}	&	\textbf{2.48}	&	2.73	\\
+	&	(2.32)	&	(2.54)	&	(5.37)	&	(5.90)	&	(0.97)	&	(1.26)	\\ \bottomrule
 \end{tabular} 
