--- a/output/mainstatistics.tex
+++ b/output/mainstatistics.tex
@@ -36,43 +36,37 @@
 %Pooled
 
 %Effects
-%Males
-
-%Females
-\newcommand{\empf}{$8$}
-\newcommand{\yearsedf}{$1.7$}
-
-
+%Male
 
 %Pooled
 
 %CBA
 %IRR
 %Males
-\newcommand{\irrm}{$15\%$}
-\newcommand{\irrsem}{$5\%$}
+\newcommand{\irrm}{$14\%$}
+\newcommand{\irrsem}{$6\%$}
 
 %Females
-\newcommand{\irrf}{$9\%$}
+\newcommand{\irrf}{$10\%$}
 \newcommand{\irrsef}{$7\%$}
 
 %Pooled
-\newcommand{\irrp}{$13\%$}
+\newcommand{\irrp}{$12\%$}
 \newcommand{\irrsep}{$5\%$}
 
 %BC
 %Males
-\newcommand{\bcm}{$11.24$}
-\newcommand{\bcsem}{$4.60$}
+\newcommand{\bcm}{$11.62$}
+\newcommand{\bcsem}{$5.49$}
 
 %Females
-\newcommand{\bcf}{$2.35$}
-\newcommand{\bcsef}{$1.09$}
+\newcommand{\bcf}{$2.60$}
+\newcommand{\bcsef}{$0.98$}
 
 %Pooled
-\newcommand{\bcp}{$5.63$}
-\newcommand{\bcsep}{$2.15$}
+\newcommand{\bcp}{$5.69$}
+\newcommand{\bcsep}{$2.32$}
 
 %NPV streams
 %Pooled
-\newcommand{\parincomenpvp}{$\$119,346$}
+\newcommand{\parincomenpvp}{$\$101,786$}
